# rosbag_direct_write

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  package.xml  rosbag_direct_write.sublime-project
include/rosbag_direct_write/: aligned_allocator.h  direct_bag.h  direct_bag_dependencies.h  direct_bag_impl.h  direct_bag_impl_dependencies.h
src/: direct_bag.cpp
test/: CMakeLists.txt  custom_image.h  custom_imu.h  custom_point_stamped.h  direct_PointCloud2.h  test_aligned_allocator.cpp  test_direct_bag.cpp  test_direct_bag_impl.cpp
